--- a/Frontend/src/index.html
+++ b/Frontend/src/index.html
@@ -16,9 +16,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
     />
-    <!-- google autocomplete places -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAFrGTkHFcnVC2YNtINIZxbGl6Azo_BvrA
-    &libraries=places&language=en"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
   </head>
 
   <body>
